// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PersonInfo component renders correctly as small variant 1`] = `
<div>
  <li
    class="person-info small-item"
  >
    <div>
      <div
        class="person-info-content"
      >
        <div
          class="avatar"
        >
          AB
        </div>
        <div>
          <p
            class="first-name-last-name"
          >
            Adam Brown
          </p>
          <p
            class="job-title"
          >
            ENGINEER
          </p>
        </div>
      </div>
    </div>
    <p
      class="email"
    >
      adam.brown@example.com
    </p>
  </li>
</div>
`;

exports[`PersonInfo component renders correctly when selected 1`] = `
<div>
  <li
    class="person-info selected-item"
  >
    <div>
      <div
        class="person-info-content"
      >
        <div
          class="avatar"
        >
          AB
        </div>
        <div>
          <p
            class="first-name-last-name"
          >
            Adam Brown
          </p>
          <p
            class="job-title"
          >
            ENGINEER
          </p>
        </div>
      </div>
      <div
        class="check-icon"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-check"
          data-icon="check"
          data-prefix="fas"
          role="img"
          viewBox="0 0 448 512"
        >
          <path
            d="M434.8 70.1c14.3 10.4 17.5 30.4 7.1 44.7l-256 352c-5.5 7.6-14 12.3-23.4 13.1s-18.5-2.7-25.1-9.3l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l101.5 101.5 234-321.7c10.4-14.3 30.4-17.5 44.7-7.1z"
            fill="currentColor"
          />
        </svg>
      </div>
    </div>
    <p
      class="email"
    >
      adam.brown@example.com
    </p>
  </li>
</div>
`;

exports[`PersonInfo component renders person info correctly 1`] = `
<div>
  <li
    class="person-info"
  >
    <div>
      <div
        class="person-info-content"
      >
        <div
          class="avatar"
        >
          AB
        </div>
        <div>
          <p
            class="first-name-last-name"
          >
            Adam Brown
          </p>
          <p
            class="job-title"
          >
            ENGINEER
          </p>
        </div>
      </div>
    </div>
    <p
      class="email"
    >
      adam.brown@example.com
    </p>
  </li>
</div>
`;
